<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- common -->
    <string name="app_name">base-app</string>
    <string name="splash">Splash</string>
    <string name="submit">提交</string>
    <string name="ensure">确定</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="back_home">返回首页</string>
    <string name="sure_exit">确定退出</string>
    <string name="sure_logout">确定注销</string>
    <string name="reset_load">重新加载</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="timeout">超时</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="save">保存</string>
    <string name="more">更多</string>
    <string name="loading">加载中...</string>
    <string name="remark">备注</string>
    <!-- Empty LineLayout -->
    <string name="abs_message_loading">玩命加载中…</string>
    <string name="abs_message_empty">没有数据，看看其他吧！</string>
    <string name="abs_message_error">网络连接错误</string>
    <string name="abs_button_loading">取消</string>
    <string name="abs_button_empty">重试</string>
    <string name="abs_button_error">重试</string>
    <!-- 下拉列表 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开后刷新</string>
    <string name="xlistview_header_hint_refreshing">正在刷新\u2026</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开后加载</string>
    <string name="xlistview_footer_hint_loading">正在加载\u2026</string>
    <string name="xlistview_footer_newest_time">1分钟前</string>

    <!-- 图片选择、裁剪 -->
    <string name="image_select_from_camera">拍照</string>
    <string name="image_select_from_album">选择本地图片</string>
    <string name="image_select_crop_img">正在剪切图片&#8230;</string>
    <!-- txt -->
    <string name="txt_quit_app">退出应用</string>
    <string name="txt_are_you_sure_to_quit">您确定要退出吗？</string>
    <!-- user login/regist -->
    <string name="name">用户名：</string>
    <string name="password">密码：</string>
    <string name="checkcode">验证码：</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_argin">请再次输入密码</string>
    <string name="input_checkcode">请输入验证码</string>

    <string name="example">殷谦《殷谦杂文全集》：“消极的艺术通常还是缺乏他者意识和纪律感的艺术，是反文化的私有形态的艺术，它追求一种消极的快感体验，咂摸着颓废的滋味和陶醉于残忍的想象以及满足于无聊的调侃；它靠大胆的粗俗和浅薄的机智来吸引观众，它带给观众的不是美感，不是心灵的净化和升华，而是让人习焉不察的道德破坏和精神伤害；它带给观众的不是优美或壮美，而是眩惑，是以甜食蜜饵或玉体横陈来满足人的低级欲望。”</string>

</resources>