<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <com.lgmshare.base.widget.ClearEditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_gray_bborder"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/widget_clear_et_delete_selector"
            android:hint="@string/input_username"
            android:maxLength="20"
            android:padding="12dp"
            android:singleLine="true"
            android:textColorHint="#C3C3C3"
            android:textSize="@dimen/ts_16" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_gray_bborder"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="12dp"
            android:singleLine="true"
            android:textColorHint="#C3C3C3"
            android:textSize="@dimen/ts_16" />

        <Button
            android:id="@+id/btn_login"
            style="@style/CommonButtonRect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:text="@string/forget_password"
            android:textColor="@color/gray_4c4c4c" />
    </LinearLayout>

</ScrollView>